Fixed horizontal scrollbar appearing when searching for videos

--- a/public/css/roomWatch.css
+++ b/public/css/roomWatch.css
@@ -4,6 +4,7 @@ body {
 }
 
 html {
+  overflow-x: hidden;
   width: 100vw;
 }
 
